# heliosproto

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
backend/: docker-compose.yml
backend/api/: config.py  main.py  pyproject.toml
backend/api/auth/: jwt.py  sep10.py
backend/api/tests/: test_config.py  test_health.py  test_sep10.py
contracts/: Cargo.toml
contracts/plugins/allowlist/: Cargo.toml
contracts/plugins/allowlist/src/: lib.rs  test.rs
contracts/plugins/allowlist/test_snapshots/test/: add_same_address_twice_is_idempotent.1.json  add_then_check_allows.1.json  add_two_remove_one_leaves_only_one.1.json  check_denied_address_returns_deny.1.json  list_returns_all_added_addresses.1.json
contracts/plugins/session-keys/: Cargo.toml
contracts/plugins/session-keys/src/: lib.rs  test.rs
contracts/plugins/spending-limits/: Cargo.toml
contracts/plugins/spending-limits/src/: lib.rs  test.rs
contracts/plugins/spending-limits/test_snapshots/test/: at_limit_allows_remaining_zero.1.json  multiple_tokens_have_independent_limits.1.json  over_limit_denies_remaining_unchanged.1.json  remove_limit_returns_defer.1.json  under_limit_allows_and_decreases_remaining.1.json
contracts/smart-account/: Cargo.toml
contracts/smart-account/src/: lib.rs  test.rs
contracts/smart-account/test_snapshots/test/: init_twice_panics.1.json  init_with_multisig_two_of_three.1.json  init_with_single_signer_sets_threshold_one.1.json  multisig_two_of_three_with_one_signature_panics.1.json  multisig_two_of_three_with_two_signatures_passes.1.json  valid_single_signer_correct_nonce_passes.1.json  wrong_signature_panics.1.json
docs/decisions/: 001-plugin-architecture.md  README.md
docs/guides/: developer-setup.md
web/: biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
web/app/: package.json  vitest.config.ts
web/app/app/: globals.css  layout.tsx  page.tsx
web/app/app/dashboard/: page.tsx
web/app/app/history/: page.tsx
web/app/app/receive/: page.tsx
web/app/app/send/: page.tsx
web/app/app/settings/: page.tsx
web/app/components/: theme-toggle.tsx
web/app/components/send/: ConfirmDialog.tsx  SendForm.tsx  SimulationPreview.tsx  types.ts
web/app/components/send/__tests__/: SendFlow.test.tsx  SendForm.test.tsx
web/app/components/ui/: index.tsx
web/app/e2e/: passkey-enrollment.spec.ts
web/app/lib/: cn.ts  predict-address.ts
web/app/lib/validation/: send.ts
web/app/lib/validation/__tests__/: send.test.ts
