[workspace]
resolver = "2"
members = [
    "smart-account",
    "plugins/session-keys",
    "plugins/allowlist",
    "plugins/spending-limits",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/heliosproto/heliosproto"
authors = ["Helios Protocol contributors"]

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
